packages/envision/src/scss/mixin/popout-menu.scss
@mixin popout-menu {
   &__menu {
      font-family: css-var('font-family');
      font-size: css-var('font-size-medium');
      list-style: none;
      margin: 0;
      padding: 0;
   }

   &__item {
      display: flex;
      align-items: baseline;
      box-sizing: border-box;
      appearance: none;
      border: {
         style: none;
         width: 0;
         radius: 0;
      }
      box-shadow: none;
      text-shadow: none;
      text-decoration: none;
      color: css-var('font-color');
      background-color: transparent;
      font-family: inherit;
      font-size: inherit;
      line-height: 1.125;
      margin: 0;
      width: 100%;
      text-align: left;
      padding: css-var('spacing-x-small');
      @include truncate-text();

      &:active,
      &:focus,
      &:hover {
         background-color: rgba(0, 0, 0, 0.1);
      }
   }

   &--divider {
      border-bottom: $border-width $border-style css-var('border-color-light');
      margin: css-var('spacing-xx-small') 0;
   }
}

